parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSANT
    AS
    BREAK
    CASE
    CLASS
    COMILLASDOBLES
    COMILLASIMPLE
    CONTINUE
    DECLARE
    DEFAULT
    DOLLAR
    DOS_PUNTOS
    DOUBLE
    ENTERO
    FLOTANTE
    FOREACH
    FUNCTION
    HASHTAG
    ID
    IDENTIFIER
    ISSET
    LBRACKET
    LIST
    MATCH
    NEW
    NULL
    OBJECT
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    RBRACKET
    RETURN
    STATIC
    SWITCH
    UNSET
    VAR
    VOID

Grammar

Rule 0     S' -> php_code
Rule 1     php_code -> php_heading statements php_end
Rule 2     php_heading -> MENORQUE PREGUNTA PHP
Rule 3     php_end -> PREGUNTA MAYORQUE
Rule 4     statements -> statement
Rule 5     statements -> statements statement
Rule 6     statement -> var_declaration
Rule 7     statement -> var_modification
Rule 8     statement -> if_statement
Rule 9     statement -> for_loop
Rule 10    statement -> while_lopp
Rule 11    statement -> comentario
Rule 12    statement -> echo
Rule 13    var_declaration -> var_dcl FINAL_DE_LINEA
Rule 14    var_modification -> var_modi FINAL_DE_LINEA
Rule 15    expresion -> math_expr
Rule 16    expresion -> string
Rule 17    expresion -> boolean
Rule 18    expresion -> array
Rule 19    string_concats -> string_concat
Rule 20    string_concats -> string_concats string_concat
Rule 21    string_concat -> DOT STRING1
Rule 22    string_concat -> DOT STRING2
Rule 23    string_concat -> DOT VARIABLE
Rule 24    string -> STRING1
Rule 25    string -> STRING2
Rule 26    string -> string string_concats
Rule 27    string -> VARIABLE string_concats
Rule 28    var_dcl -> VARIABLE ASIGNACION string
Rule 29    var_modi -> VARIABLE CONCAT_ASIG string
Rule 30    var_modi -> VARIABLE CONCAT_ASIG VARIABLE
Rule 31    signo_mas_menos -> MAS MENOS
Rule 32    signo_mas_menos -> MAS MENOS signo_mas_menos
Rule 33    signo_menos_mas -> MENOS MAS
Rule 34    signo_menos_mas -> MENOS MAS signo_menos_mas
Rule 35    signo -> MAS
Rule 36    signo -> MENOS
Rule 37    signo -> signo_mas_menos
Rule 38    signo -> signo_menos_mas
Rule 39    math_oper -> MAS
Rule 40    math_oper -> MENOS
Rule 41    math_oper -> MULTIPLICACION
Rule 42    math_oper -> DIVISION
Rule 43    math_expr -> NUMERO
Rule 44    math_expr -> signo NUMERO
Rule 45    math_expr -> VARIABLE
Rule 46    math_expr -> signo VARIABLE
Rule 47    math_expr -> math_expr operaciones_mat
Rule 48    operacion_mat -> math_oper NUMERO
Rule 49    operacion_mat -> math_oper VARIABLE
Rule 50    operacion_mat -> signo NUMERO
Rule 51    operacion_mat -> signo VARIABLE
Rule 52    operaciones_mat -> operacion_mat
Rule 53    operaciones_mat -> operacion_mat operaciones_mat
Rule 54    var_dcl -> VARIABLE ASIGNACION math_expr
Rule 55    var_modi -> VARIABLE AUTOINCREMENTO
Rule 56    var_modi -> VARIABLE AUTODECREMENTO
Rule 57    var_modi -> VARIABLE ASIGNACION_AUMENTADA math_expr
Rule 58    var_modi -> VARIABLE ASIGNACION_DISMINUIDA math_expr
Rule 59    if_statement -> main_if_statement scope
Rule 60    if_statement -> main_if_statement scope else scope
Rule 61    if_statement -> main_if_statement scope many_elseif
Rule 62    if_statement -> main_if_statement scope many_elseif else scope
Rule 63    many_elseif -> elseif_statement scope
Rule 64    many_elseif -> elseif_statement scope many_elseif
Rule 65    comp_bin_oprs -> MAYORQUE
Rule 66    comp_bin_oprs -> MENORQUE
Rule 67    comp_bin_oprs -> MAYORIGUAL
Rule 68    comp_bin_oprs -> MENORIGUAL
Rule 69    comp_bin_oprs -> SAME
Rule 70    comp_bin_oprs -> EQUALS
Rule 71    comp_bin_oprs -> DESIGUALDAD
Rule 72    comp_bin_oprs -> AND
Rule 73    comp_bin_oprs -> OR
Rule 74    bool_unary_oprs -> negacion
Rule 75    negacion -> NEGACION
Rule 76    negacion -> NEGACION negacion
Rule 77    boolean -> TRUE
Rule 78    boolean -> FALSE
Rule 79    boolean -> expresion comp_bin_oprs expresion
Rule 80    boolean -> bool_unary_oprs boolean
Rule 81    main_if_statement -> IF LPAREN boolean RPAREN
Rule 82    elseif_statement -> ELSEIF LPAREN boolean RPAREN
Rule 83    else -> ELSE
Rule 84    scope -> LLLAVE statements RLLAVE
Rule 85    while_lopp -> WHILE LPAREN boolean RPAREN scope
Rule 86    for_loop -> FOR LPAREN var_dcl FINAL_DE_LINEA boolean FINAL_DE_LINEA var_modi RPAREN scope
Rule 87    assigncacionArrow -> expresion ASIGNACION2 expresion
Rule 88    array_item -> assigncacionArrow
Rule 89    array_item -> expresion
Rule 90    array_items -> array_item
Rule 91    array_items -> array_item COMA array_items
Rule 92    arg -> expresion
Rule 93    many_args -> arg
Rule 94    many_args -> arg COMA many_args
Rule 95    array -> ARRAY LPAREN array_items RPAREN
Rule 96    var_dcl -> VARIABLE ASIGNACION array
Rule 97    echo -> ECHO expresion FINAL_DE_LINEA
Rule 98    comentario -> COMENTARIO

Terminals, with rules where they appear

AMPERSANT            : 
AND                  : 72
ARRAY                : 95
AS                   : 
ASIGNACION           : 28 54 96
ASIGNACION2          : 87
ASIGNACION_AUMENTADA : 57
ASIGNACION_DISMINUIDA : 58
AUTODECREMENTO       : 56
AUTOINCREMENTO       : 55
BREAK                : 
CASE                 : 
CLASS                : 
COMA                 : 91 94
COMENTARIO           : 98
COMILLASDOBLES       : 
COMILLASIMPLE        : 
CONCAT_ASIG          : 29 30
CONTINUE             : 
DECLARE              : 
DEFAULT              : 
DESIGUALDAD          : 71
DIVISION             : 42
DOLLAR               : 
DOS_PUNTOS           : 
DOT                  : 21 22 23
DOUBLE               : 
ECHO                 : 97
ELSE                 : 83
ELSEIF               : 82
ENTERO               : 
EQUALS               : 70
FALSE                : 78
FINAL_DE_LINEA       : 13 14 86 86 97
FLOTANTE             : 
FOR                  : 86
FOREACH              : 
FUNCTION             : 
HASHTAG              : 
ID                   : 
IDENTIFIER           : 
IF                   : 81
ISSET                : 
LBRACKET             : 
LIST                 : 
LLLAVE               : 84
LPAREN               : 81 82 85 86 95
MAS                  : 31 32 33 34 35 39
MATCH                : 
MAYORIGUAL           : 67
MAYORQUE             : 3 65
MENORIGUAL           : 68
MENORQUE             : 2 66
MENOS                : 31 32 33 34 36 40
MULTIPLICACION       : 41
NEGACION             : 75 76
NEW                  : 
NULL                 : 
NUMERO               : 43 44 48 50
OBJECT               : 
OR                   : 73
PHP                  : 2
PREGUNTA             : 2 3
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACKET             : 
RETURN               : 
RLLAVE               : 84
RPAREN               : 81 82 85 86 95
SAME                 : 69
STATIC               : 
STRING1              : 21 24
STRING2              : 22 25
SWITCH               : 
TRUE                 : 77
UNSET                : 
VAR                  : 
VARIABLE             : 23 27 28 29 30 30 45 46 49 51 54 55 56 57 58 96
VOID                 : 
WHILE                : 85
error                : 

Nonterminals, with rules where they appear

arg                  : 93 94
array                : 18 96
array_item           : 90 91
array_items          : 91 95
assigncacionArrow    : 88
bool_unary_oprs      : 80
boolean              : 17 80 81 82 85 86
comentario           : 11
comp_bin_oprs        : 79
echo                 : 12
else                 : 60 62
elseif_statement     : 63 64
expresion            : 79 79 87 87 89 92 97
for_loop             : 9
if_statement         : 8
main_if_statement    : 59 60 61 62
many_args            : 94
many_elseif          : 61 62 64
math_expr            : 15 47 54 57 58
math_oper            : 48 49
negacion             : 74 76
operacion_mat        : 52 53
operaciones_mat      : 47 53
php_code             : 0
php_end              : 1
php_heading          : 1
scope                : 59 60 60 61 62 62 63 64 85 86
signo                : 44 46 50 51
signo_mas_menos      : 32 37
signo_menos_mas      : 34 38
statement            : 4 5
statements           : 1 5 84
string               : 16 26 28 29
string_concat        : 19 20
string_concats       : 20 26 27
var_dcl              : 13 86
var_declaration      : 6
var_modi             : 14 86
var_modification     : 7
while_lopp           : 10

Parsing method: LALR

state 0

    (0) S' -> . php_code
    (1) php_code -> . php_heading statements php_end
    (2) php_heading -> . MENORQUE PREGUNTA PHP

    MENORQUE        shift and go to state 3

    php_code                       shift and go to state 1
    php_heading                    shift and go to state 2

state 1

    (0) S' -> php_code .



state 2

    (1) php_code -> php_heading . statements php_end
    (4) statements -> . statement
    (5) statements -> . statements statement
    (6) statement -> . var_declaration
    (7) statement -> . var_modification
    (8) statement -> . if_statement
    (9) statement -> . for_loop
    (10) statement -> . while_lopp
    (11) statement -> . comentario
    (12) statement -> . echo
    (13) var_declaration -> . var_dcl FINAL_DE_LINEA
    (14) var_modification -> . var_modi FINAL_DE_LINEA
    (59) if_statement -> . main_if_statement scope
    (60) if_statement -> . main_if_statement scope else scope
    (61) if_statement -> . main_if_statement scope many_elseif
    (62) if_statement -> . main_if_statement scope many_elseif else scope
    (86) for_loop -> . FOR LPAREN var_dcl FINAL_DE_LINEA boolean FINAL_DE_LINEA var_modi RPAREN scope
    (85) while_lopp -> . WHILE LPAREN boolean RPAREN scope
    (98) comentario -> . COMENTARIO
    (97) echo -> . ECHO expresion FINAL_DE_LINEA
    (28) var_dcl -> . VARIABLE ASIGNACION string
    (54) var_dcl -> . VARIABLE ASIGNACION math_expr
    (96) var_dcl -> . VARIABLE ASIGNACION array
    (29) var_modi -> . VARIABLE CONCAT_ASIG string
    (30) var_modi -> . VARIABLE CONCAT_ASIG VARIABLE
    (55) var_modi -> . VARIABLE AUTOINCREMENTO
    (56) var_modi -> . VARIABLE AUTODECREMENTO
    (57) var_modi -> . VARIABLE ASIGNACION_AUMENTADA math_expr
    (58) var_modi -> . VARIABLE ASIGNACION_DISMINUIDA math_expr
    (81) main_if_statement -> . IF LPAREN boolean RPAREN

    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    COMENTARIO      shift and go to state 18
    ECHO            shift and go to state 19
    VARIABLE        shift and go to state 20
    IF              shift and go to state 21

    statements                     shift and go to state 4
    statement                      shift and go to state 5
    var_declaration                shift and go to state 6
    var_modification               shift and go to state 7
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 9
    while_lopp                     shift and go to state 10
    comentario                     shift and go to state 11
    echo                           shift and go to state 12
    var_dcl                        shift and go to state 13
    var_modi                       shift and go to state 14
    main_if_statement              shift and go to state 15

state 3

    (2) php_heading -> MENORQUE . PREGUNTA PHP

    PREGUNTA        shift and go to state 22


state 4

    (1) php_code -> php_heading statements . php_end
    (5) statements -> statements . statement
    (3) php_end -> . PREGUNTA MAYORQUE
    (6) statement -> . var_declaration
    (7) statement -> . var_modification
    (8) statement -> . if_statement
    (9) statement -> . for_loop
    (10) statement -> . while_lopp
    (11) statement -> . comentario
    (12) statement -> . echo
    (13) var_declaration -> . var_dcl FINAL_DE_LINEA
    (14) var_modification -> . var_modi FINAL_DE_LINEA
    (59) if_statement -> . main_if_statement scope
    (60) if_statement -> . main_if_statement scope else scope
    (61) if_statement -> . main_if_statement scope many_elseif
    (62) if_statement -> . main_if_statement scope many_elseif else scope
    (86) for_loop -> . FOR LPAREN var_dcl FINAL_DE_LINEA boolean FINAL_DE_LINEA var_modi RPAREN scope
    (85) while_lopp -> . WHILE LPAREN boolean RPAREN scope
    (98) comentario -> . COMENTARIO
    (97) echo -> . ECHO expresion FINAL_DE_LINEA
    (28) var_dcl -> . VARIABLE ASIGNACION string
    (54) var_dcl -> . VARIABLE ASIGNACION math_expr
    (96) var_dcl -> . VARIABLE ASIGNACION array
    (29) var_modi -> . VARIABLE CONCAT_ASIG string
    (30) var_modi -> . VARIABLE CONCAT_ASIG VARIABLE
    (55) var_modi -> . VARIABLE AUTOINCREMENTO
    (56) var_modi -> . VARIABLE AUTODECREMENTO
    (57) var_modi -> . VARIABLE ASIGNACION_AUMENTADA math_expr
    (58) var_modi -> . VARIABLE ASIGNACION_DISMINUIDA math_expr
    (81) main_if_statement -> . IF LPAREN boolean RPAREN

    PREGUNTA        shift and go to state 25
    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    COMENTARIO      shift and go to state 18
    ECHO            shift and go to state 19
    VARIABLE        shift and go to state 20
    IF              shift and go to state 21

    php_end                        shift and go to state 23
    statement                      shift and go to state 24
    var_declaration                shift and go to state 6
    var_modification               shift and go to state 7
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 9
    while_lopp                     shift and go to state 10
    comentario                     shift and go to state 11
    echo                           shift and go to state 12
    var_dcl                        shift and go to state 13
    var_modi                       shift and go to state 14
    main_if_statement              shift and go to state 15

state 5

    (4) statements -> statement .

    PREGUNTA        reduce using rule 4 (statements -> statement .)
    FOR             reduce using rule 4 (statements -> statement .)
    WHILE           reduce using rule 4 (statements -> statement .)
    COMENTARIO      reduce using rule 4 (statements -> statement .)
    ECHO            reduce using rule 4 (statements -> statement .)
    VARIABLE        reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    RLLAVE          reduce using rule 4 (statements -> statement .)


state 6

    (6) statement -> var_declaration .

    PREGUNTA        reduce using rule 6 (statement -> var_declaration .)
    FOR             reduce using rule 6 (statement -> var_declaration .)
    WHILE           reduce using rule 6 (statement -> var_declaration .)
    COMENTARIO      reduce using rule 6 (statement -> var_declaration .)
    ECHO            reduce using rule 6 (statement -> var_declaration .)
    VARIABLE        reduce using rule 6 (statement -> var_declaration .)
    IF              reduce using rule 6 (statement -> var_declaration .)
    RLLAVE          reduce using rule 6 (statement -> var_declaration .)


state 7

    (7) statement -> var_modification .

    PREGUNTA        reduce using rule 7 (statement -> var_modification .)
    FOR             reduce using rule 7 (statement -> var_modification .)
    WHILE           reduce using rule 7 (statement -> var_modification .)
    COMENTARIO      reduce using rule 7 (statement -> var_modification .)
    ECHO            reduce using rule 7 (statement -> var_modification .)
    VARIABLE        reduce using rule 7 (statement -> var_modification .)
    IF              reduce using rule 7 (statement -> var_modification .)
    RLLAVE          reduce using rule 7 (statement -> var_modification .)


state 8

    (8) statement -> if_statement .

    PREGUNTA        reduce using rule 8 (statement -> if_statement .)
    FOR             reduce using rule 8 (statement -> if_statement .)
    WHILE           reduce using rule 8 (statement -> if_statement .)
    COMENTARIO      reduce using rule 8 (statement -> if_statement .)
    ECHO            reduce using rule 8 (statement -> if_statement .)
    VARIABLE        reduce using rule 8 (statement -> if_statement .)
    IF              reduce using rule 8 (statement -> if_statement .)
    RLLAVE          reduce using rule 8 (statement -> if_statement .)


state 9

    (9) statement -> for_loop .

    PREGUNTA        reduce using rule 9 (statement -> for_loop .)
    FOR             reduce using rule 9 (statement -> for_loop .)
    WHILE           reduce using rule 9 (statement -> for_loop .)
    COMENTARIO      reduce using rule 9 (statement -> for_loop .)
    ECHO            reduce using rule 9 (statement -> for_loop .)
    VARIABLE        reduce using rule 9 (statement -> for_loop .)
    IF              reduce using rule 9 (statement -> for_loop .)
    RLLAVE          reduce using rule 9 (statement -> for_loop .)


state 10

    (10) statement -> while_lopp .

    PREGUNTA        reduce using rule 10 (statement -> while_lopp .)
    FOR             reduce using rule 10 (statement -> while_lopp .)
    WHILE           reduce using rule 10 (statement -> while_lopp .)
    COMENTARIO      reduce using rule 10 (statement -> while_lopp .)
    ECHO            reduce using rule 10 (statement -> while_lopp .)
    VARIABLE        reduce using rule 10 (statement -> while_lopp .)
    IF              reduce using rule 10 (statement -> while_lopp .)
    RLLAVE          reduce using rule 10 (statement -> while_lopp .)


state 11

    (11) statement -> comentario .

    PREGUNTA        reduce using rule 11 (statement -> comentario .)
    FOR             reduce using rule 11 (statement -> comentario .)
    WHILE           reduce using rule 11 (statement -> comentario .)
    COMENTARIO      reduce using rule 11 (statement -> comentario .)
    ECHO            reduce using rule 11 (statement -> comentario .)
    VARIABLE        reduce using rule 11 (statement -> comentario .)
    IF              reduce using rule 11 (statement -> comentario .)
    RLLAVE          reduce using rule 11 (statement -> comentario .)


state 12

    (12) statement -> echo .

    PREGUNTA        reduce using rule 12 (statement -> echo .)
    FOR             reduce using rule 12 (statement -> echo .)
    WHILE           reduce using rule 12 (statement -> echo .)
    COMENTARIO      reduce using rule 12 (statement -> echo .)
    ECHO            reduce using rule 12 (statement -> echo .)
    VARIABLE        reduce using rule 12 (statement -> echo .)
    IF              reduce using rule 12 (statement -> echo .)
    RLLAVE          reduce using rule 12 (statement -> echo .)


state 13

    (13) var_declaration -> var_dcl . FINAL_DE_LINEA

    FINAL_DE_LINEA  shift and go to state 26


state 14

    (14) var_modification -> var_modi . FINAL_DE_LINEA

    FINAL_DE_LINEA  shift and go to state 27


state 15

    (59) if_statement -> main_if_statement . scope
    (60) if_statement -> main_if_statement . scope else scope
    (61) if_statement -> main_if_statement . scope many_elseif
    (62) if_statement -> main_if_statement . scope many_elseif else scope
    (84) scope -> . LLLAVE statements RLLAVE

    LLLAVE          shift and go to state 29

    scope                          shift and go to state 28

state 16

    (86) for_loop -> FOR . LPAREN var_dcl FINAL_DE_LINEA boolean FINAL_DE_LINEA var_modi RPAREN scope

    LPAREN          shift and go to state 30


state 17

    (85) while_lopp -> WHILE . LPAREN boolean RPAREN scope

    LPAREN          shift and go to state 31


state 18

    (98) comentario -> COMENTARIO .

    PREGUNTA        reduce using rule 98 (comentario -> COMENTARIO .)
    FOR             reduce using rule 98 (comentario -> COMENTARIO .)
    WHILE           reduce using rule 98 (comentario -> COMENTARIO .)
    COMENTARIO      reduce using rule 98 (comentario -> COMENTARIO .)
    ECHO            reduce using rule 98 (comentario -> COMENTARIO .)
    VARIABLE        reduce using rule 98 (comentario -> COMENTARIO .)
    IF              reduce using rule 98 (comentario -> COMENTARIO .)
    RLLAVE          reduce using rule 98 (comentario -> COMENTARIO .)


state 19

    (97) echo -> ECHO . expresion FINAL_DE_LINEA
    (15) expresion -> . math_expr
    (16) expresion -> . string
    (17) expresion -> . boolean
    (18) expresion -> . array
    (43) math_expr -> . NUMERO
    (44) math_expr -> . signo NUMERO
    (45) math_expr -> . VARIABLE
    (46) math_expr -> . signo VARIABLE
    (47) math_expr -> . math_expr operaciones_mat
    (24) string -> . STRING1
    (25) string -> . STRING2
    (26) string -> . string string_concats
    (27) string -> . VARIABLE string_concats
    (77) boolean -> . TRUE
    (78) boolean -> . FALSE
    (79) boolean -> . expresion comp_bin_oprs expresion
    (80) boolean -> . bool_unary_oprs boolean
    (95) array -> . ARRAY LPAREN array_items RPAREN
    (35) signo -> . MAS
    (36) signo -> . MENOS
    (37) signo -> . signo_mas_menos
    (38) signo -> . signo_menos_mas
    (74) bool_unary_oprs -> . negacion
    (31) signo_mas_menos -> . MAS MENOS
    (32) signo_mas_menos -> . MAS MENOS signo_mas_menos
    (33) signo_menos_mas -> . MENOS MAS
    (34) signo_menos_mas -> . MENOS MAS signo_menos_mas
    (75) negacion -> . NEGACION
    (76) negacion -> . NEGACION negacion

    NUMERO          shift and go to state 37
    VARIABLE        shift and go to state 39
    STRING1         shift and go to state 40
    STRING2         shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    ARRAY           shift and go to state 45
    MAS             shift and go to state 46
    MENOS           shift and go to state 47
    NEGACION        shift and go to state 51

    expresion                      shift and go to state 32
    math_expr                      shift and go to state 33
    string                         shift and go to state 34
    boolean                        shift and go to state 35
    array                          shift and go to state 36
    signo                          shift and go to state 38
    bool_unary_oprs                shift and go to state 44
    signo_mas_menos                shift and go to state 48
    signo_menos_mas                shift and go to state 49
    negacion                       shift and go to state 50

state 20

    (28) var_dcl -> VARIABLE . ASIGNACION string
    (54) var_dcl -> VARIABLE . ASIGNACION math_expr
    (96) var_dcl -> VARIABLE . ASIGNACION array
    (29) var_modi -> VARIABLE . CONCAT_ASIG string
    (30) var_modi -> VARIABLE . CONCAT_ASIG VARIABLE
    (55) var_modi -> VARIABLE . AUTOINCREMENTO
    (56) var_modi -> VARIABLE . AUTODECREMENTO
    (57) var_modi -> VARIABLE . ASIGNACION_AUMENTADA math_expr
    (58) var_modi -> VARIABLE . ASIGNACION_DISMINUIDA math_expr

    ASIGNACION      shift and go to state 52
    CONCAT_ASIG     shift and go to state 53
    AUTOINCREMENTO  shift and go to state 54
    AUTODECREMENTO  shift and go to state 55
    ASIGNACION_AUMENTADA shift and go to state 56
    ASIGNACION_DISMINUIDA shift and go to state 57


state 21

    (81) main_if_statement -> IF . LPAREN boolean RPAREN

    LPAREN          shift and go to state 58


state 22

    (2) php_heading -> MENORQUE PREGUNTA . PHP

    PHP             shift and go to state 59


state 23

    (1) php_code -> php_heading statements php_end .

    $end            reduce using rule 1 (php_code -> php_heading statements php_end .)


state 24

    (5) statements -> statements statement .

    PREGUNTA        reduce using rule 5 (statements -> statements statement .)
    FOR             reduce using rule 5 (statements -> statements statement .)
    WHILE           reduce using rule 5 (statements -> statements statement .)
    COMENTARIO      reduce using rule 5 (statements -> statements statement .)
    ECHO            reduce using rule 5 (statements -> statements statement .)
    VARIABLE        reduce using rule 5 (statements -> statements statement .)
    IF              reduce using rule 5 (statements -> statements statement .)
    RLLAVE          reduce using rule 5 (statements -> statements statement .)


state 25

    (3) php_end -> PREGUNTA . MAYORQUE

    MAYORQUE        shift and go to state 60


state 26

    (13) var_declaration -> var_dcl FINAL_DE_LINEA .

    PREGUNTA        reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)
    FOR             reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)
    WHILE           reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)
    COMENTARIO      reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)
    ECHO            reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)
    VARIABLE        reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)
    IF              reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)
    RLLAVE          reduce using rule 13 (var_declaration -> var_dcl FINAL_DE_LINEA .)


state 27

    (14) var_modification -> var_modi FINAL_DE_LINEA .

    PREGUNTA        reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)
    FOR             reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)
    WHILE           reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)
    COMENTARIO      reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)
    ECHO            reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)
    VARIABLE        reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)
    IF              reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)
    RLLAVE          reduce using rule 14 (var_modification -> var_modi FINAL_DE_LINEA .)


state 28

    (59) if_statement -> main_if_statement scope .
    (60) if_statement -> main_if_statement scope . else scope
    (61) if_statement -> main_if_statement scope . many_elseif
    (62) if_statement -> main_if_statement scope . many_elseif else scope
    (83) else -> . ELSE
    (63) many_elseif -> . elseif_statement scope
    (64) many_elseif -> . elseif_statement scope many_elseif
    (82) elseif_statement -> . ELSEIF LPAREN boolean RPAREN

    PREGUNTA        reduce using rule 59 (if_statement -> main_if_statement scope .)
    FOR             reduce using rule 59 (if_statement -> main_if_statement scope .)
    WHILE           reduce using rule 59 (if_statement -> main_if_statement scope .)
    COMENTARIO      reduce using rule 59 (if_statement -> main_if_statement scope .)
    ECHO            reduce using rule 59 (if_statement -> main_if_statement scope .)
    VARIABLE        reduce using rule 59 (if_statement -> main_if_statement scope .)
    IF              reduce using rule 59 (if_statement -> main_if_statement scope .)
    RLLAVE          reduce using rule 59 (if_statement -> main_if_statement scope .)
    ELSE            shift and go to state 63
    ELSEIF          shift and go to state 65

    else                           shift and go to state 61
    many_elseif                    shift and go to state 62
    elseif_statement               shift and go to state 64

state 29

    (84) scope -> LLLAVE . statements RLLAVE
    (4) statements -> . statement
    (5) statements -> . statements statement
    (6) statement -> . var_declaration
    (7) statement -> . var_modification
    (8) statement -> . if_statement
    (9) statement -> . for_loop
    (10) statement -> . while_lopp
    (11) statement -> . comentario
    (12) statement -> . echo
    (13) var_declaration -> . var_dcl FINAL_DE_LINEA
    (14) var_modification -> . var_modi FINAL_DE_LINEA
    (59) if_statement -> . main_if_statement scope
    (60) if_statement -> . main_if_statement scope else scope
    (61) if_statement -> . main_if_statement scope many_elseif
    (62) if_statement -> . main_if_statement scope many_elseif else scope
    (86) for_loop -> . FOR LPAREN var_dcl FINAL_DE_LINEA boolean FINAL_DE_LINEA var_modi RPAREN scope
    (85) while_lopp -> . WHILE LPAREN boolean RPAREN scope
    (98) comentario -> . COMENTARIO
    (97) echo -> . ECHO expresion FINAL_DE_LINEA
    (28) var_dcl -> . VARIABLE ASIGNACION string
    (54) var_dcl -> . VARIABLE ASIGNACION math_expr
    (96) var_dcl -> . VARIABLE ASIGNACION array
    (29) var_modi -> . VARIABLE CONCAT_ASIG string
    (30) var_modi -> . VARIABLE CONCAT_ASIG VARIABLE
    (55) var_modi -> . VARIABLE AUTOINCREMENTO
    (56) var_modi -> . VARIABLE AUTODECREMENTO
    (57) var_modi -> . VARIABLE ASIGNACION_AUMENTADA math_expr
    (58) var_modi -> . VARIABLE ASIGNACION_DISMINUIDA math_expr
    (81) main_if_statement -> . IF LPAREN boolean RPAREN

    FOR             shift and go to state 16
    WHILE           shift and go to state 17
    COMENTARIO      shift and go to state 18
    ECHO            shift and go to state 19
    VARIABLE        shift and go to state 20
    IF              shift and go to state 21

    statements                     shift and go to state 66
    statement                      shift and go to state 5
    var_declaration                shift and go to state 6
    var_modification               shift and go to state 7
    if_statement                   shift and go to state 8
    for_loop                       shift and go to state 9
    while_lopp                     shift and go to state 10
    comentario                     shift and go to state 11
    echo                           shift and go to state 12
    var_dcl                        shift and go to state 13
    var_modi                       shift and go to state 14
    main_if_statement              shift and go to state 15

state 30

    (86) for_loop -> FOR LPAREN . var_dcl FINAL_DE_LINEA boolean FINAL_DE_LINEA var_modi RPAREN scope
    (28) var_dcl -> . VARIABLE ASIGNACION string
    (54) var_dcl -> . VARIABLE ASIGNACION math_expr
    (96) var_dcl -> . VARIABLE ASIGNACION array

    VARIABLE        shift and go to state 68

    var_dcl                        shift and go to state 67

state 31

    (85) while_lopp -> WHILE LPAREN . boolean RPAREN scope
    (77) boolean -> . TRUE
    (78) boolean -> . FALSE
    (79) boolean -> . expresion comp_bin_oprs expresion
    (80) boolean -> . bool_unary_oprs boolean
    (15) expresion -> . math_expr
    (16) expresion -> . string
    (17) expresion -> . boolean
    (18) expresion -> . array
    (74) bool_unary_oprs -> . negacion
    (43) math_expr -> . NUMERO
    (44) math_expr -> . signo NUMERO
    (45) math_expr -> . VARIABLE
    (46) math_expr -> . signo VARIABLE
    (47) math_expr -> . math_expr operaciones_mat
    (24) string -> . STRING1
    (25) string -> . STRING2
    (26) string -> . string string_concats
    (27) string -> . VARIABLE string_concats
    (95) array -> . ARRAY LPAREN array_items RPAREN
    (75) negacion -> . NEGACION
    (76) negacion -> . NEGACION negacion
    (35) signo -> . MAS
    (36) signo -> . MENOS
    (37) signo -> . signo_mas_menos
    (38) signo -> . signo_menos_mas
    (31) signo_mas_menos -> . MAS MENOS
    (32) signo_mas_menos -> . MAS MENOS signo_mas_menos
    (33) signo_menos_mas -> . MENOS MAS
    (34) signo_menos_mas -> . MENOS MAS signo_menos_mas

    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NUMERO          shift and go to state 37
    VARIABLE        shift and go to state 39
    STRING1         shift and go to state 40
    STRING2         shift and go to state 41
    ARRAY           shift and go to state 45
    NEGACION        shift and go to state 51
    MAS             shift and go to state 46
    MENOS           shift and go to state 47

    boolean                        shift and go to state 69
    expresion                      shift and go to state 70
    bool_unary_oprs                shift and go to state 44
    math_expr                      shift and go to state 33
    string                         shift and go to state 34
    array                          shift and go to state 36
    negacion                       shift and go to state 50
    signo                          shift and go to state 38
    signo_mas_menos                shift and go to state 48
    signo_menos_mas                shift and go to state 49

state 32

    (97) echo -> ECHO expresion . FINAL_DE_LINEA
    (79) boolean -> expresion . comp_bin_oprs expresion
    (65) comp_bin_oprs -> . MAYORQUE
    (66) comp_bin_oprs -> . MENORQUE
    (67) comp_bin_oprs -> . MAYORIGUAL
    (68) comp_bin_oprs -> . MENORIGUAL
    (69) comp_bin_oprs -> . SAME
    (70) comp_bin_oprs -> . EQUALS
    (71) comp_bin_oprs -> . DESIGUALDAD
    (72) comp_bin_oprs -> . AND
    (73) comp_bin_oprs -> . OR

    FINAL_DE_LINEA  shift and go to state 71
    MAYORQUE        shift and go to state 73
    MENORQUE        shift and go to state 74
    MAYORIGUAL      shift and go to state 75
    MENORIGUAL      shift and go to state 76
    SAME            shift and go to state 77
    EQUALS          shift and go to state 78
    DESIGUALDAD     shift and go to state 79
    AND             shift and go to state 80
    OR              shift and go to state 81

    comp_bin_oprs                  shift and go to state 72

state 33
